wasm/genomic_dna_mutate_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_nbwx_wtt/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/962cadf91c85b67fda37a800296c82f3301372a6.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/962cadf91c85b67fda37a800296c82f3301372a6.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/1f448bdd75acef2a11463d2f5a650a6efac9a110.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/1f448bdd75acef2a11463d2f5a650a6efac9a110.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/f414acef75fd5df85c81f109bdb0730ff239d08b.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/f414acef75fd5df85c81f109bdb0730ff239d08b.json" for subsequent builds)
cache:INFO:  - ok
